fix(Header): add overflow:hidden

--- a/src/app/_components/Header.module.css
+++ b/src/app/_components/Header.module.css
@@ -56,6 +56,7 @@
 .hide {
   height: 0;
   box-shadow: none;
+  overflow: hidden;
 }
 
 .header svg {
